# mcp-vegalite-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_server_datavis/: __init__.py  server.py
src/mcp_server_vegalite/: __init__.py  server.py
