[project]
name = "mcp-server-datavis"
version = "0.0.1"
description = "A simple Data Visualization MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "vl-convert-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp_server_datavis = "mcp_server_datavis:main"
